--- a/web/css/style.css
+++ b/web/css/style.css
@@ -48,12 +48,52 @@
 
 .content {
     background: #000000;
-    background-image: radial-gradient(#009600bf 25%, #000000);
+    background-image: radial-gradient(#00960070 0%, #000000);
+    animation: pulse 2s infinite alternate linear;    
     font-family:'Share Tech Mono', monospace;
+    font-size: 1.25rem;
     text-shadow: 0 0 5px #C8C8C8;
     color: #ffffff;
     background-attachment: fixed;
     padding: 3rem;
+    position: relative;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+.content::after {    
+    background: repeating-linear-gradient(
+        0deg,
+        #00000077,
+        #00000077 1px,
+        transparent 1px,
+        transparent 2px
+    );
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events:none;
+}
+
+.content a, .content a:visited, .content a:active {
+    color: #ffffff;
+}
+
+.content-ul {
+    list-style: none;
+}
+
+.content-ul > li > ul {
+    padding: 0 2rem;
+}
+
+.category {
+    font-weight: bold;
+    font-size: larger;
 }
 
 .drive {
@@ -68,6 +108,49 @@
     content: "_";
     margin-left: 0.2rem;
     animation: blink 0.65s infinite alternate;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-wrap: wrap-reverse;
+}
+
+.flex > * {
+    margin: 0.5rem;
+}
+
+img {
+    width: 256px;
+    max-width: 100%;
+    border: 1px solid #ffffffbb;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 25px 5px #000000aa;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
+nav li {
+    padding: 1rem 1rem 1rem 0;
+}
+
+footer {
+    margin-top: 1rem;
+    text-align: center;
+}
+
+hr {
+    border: 1px solid white;
+}
+
+@keyframes pulse {
+    from {opacity: 1;}
+    to {opacity: 0.96;}
 }
 
 @keyframes blink {
