--- a/web/week03/css/style.css
+++ b/web/week03/css/style.css
@@ -24,13 +24,17 @@ header, footer {
     color: white;
 }
 
+header div, .price-stock, nav li, .total{
+    font-family: "Bangers", "Roboto", Arial;
+    font-size: larger;
+}
+
 header div {
     background: white;
     display:inline-block;
     padding: 0.75rem 1.5rem 0.75rem 1rem;
     border-radius: 1rem;
-    font-size: 2.5rem;
-    font-family: "Bangers";
+    font-size: 2.5rem;    
     position: relative;
     margin: 0 1rem 0 4rem;
 }
@@ -162,7 +166,7 @@ main {
 .price-stock {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
 }
 
 .price-stock input {    
@@ -245,7 +249,6 @@ nav li {
     padding: 0.75rem 1.5rem;
     border: 2px solid #303030;
     border-radius: 0.25rem;
-    font-family: "Bangers";
     font-size: 1.6rem;
     display: flex;
     align-items: center;
