--- a/web/week03/css/style.css
+++ b/web/week03/css/style.css
@@ -120,6 +120,9 @@ main {
     padding: 1rem;
     background: white;
     margin: 0 auto;
+}
+
+.details .stock.item{
     display: flex;    
     justify-content: space-between;
     align-items: flex-start;
