--- a/web/week03/css/style.css
+++ b/web/week03/css/style.css
@@ -73,7 +73,7 @@ main {
     padding: 1rem;
 }
 
-.stock:not(.item, .details) {
+.stock::not(.item, .details) {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
