--- a/web/week03/css/style.css
+++ b/web/week03/css/style.css
@@ -73,7 +73,7 @@ main {
     padding: 1rem;
 }
 
-.stock::not(.item, .details) {
+.stock {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
@@ -120,7 +120,11 @@ main {
     box-shadow: 2px 2px 5px 2px grey;
     padding: 1rem;
     background: white;
-    
+    display: block
+}
+
+.stock.details {
+    display: block;
 }
 
 .details .stock.item{
