--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -2,5 +2,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fondamento:ital@0;1&display=swap');
 
 html {
-    font-family: 'Fondamento', Arial, Helvetica, sans-serif
+    font-family: 'Fondamento', Arial, Helvetica, sans-serif;
 }
