--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -4,3 +4,7 @@
 html {
     font-family: 'Fondamento', Arial, Helvetica, sans-serif;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Ruslan', Georgia, 'Times New Roman', Times, serif;
+}
