--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -6,5 +6,5 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Ruslan', Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Ruslan Display', Georgia, 'Times New Roman', Times, serif;
 }
