--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -1,7 +1,7 @@
 header {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 }
 
