--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -17,5 +17,5 @@ a, a:visited, a:focus {
 }
 
 header {
-    background-image: linear-gradient(to right, var(--color-logo), white 75%);
+    background-image: linear-gradient(to right, var(--color-logo) 25%, white 75%);
 }
