--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -8,3 +8,13 @@ header {
 a {
     text-decoration: none;
 }
+
+nav li {
+    display: block;
+}
+
+nav ul {
+    display: flex;
+    padding: 0;
+    list-style: none;
+}
