--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -15,6 +15,8 @@ nav li {
 
 nav ul {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0;
     list-style: none;
 }
