--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -11,7 +11,8 @@ a {
 
 .nav {
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .nav-ul {
