--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -3,7 +3,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
 }
 
 a {
