--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -15,7 +15,7 @@ a {
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
 }
 
 .nav-ul {
