--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -3,7 +3,7 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.25rem 0.5rem;
 }
 
 body {
@@ -37,4 +37,5 @@ a {
 
 footer {
     text-align: center;
+    padding: 0.5rem;
 }
