--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -35,6 +35,6 @@ header {
 }
 
 footer {
-    background: var(--logo-dark);
+    background-image: linear-gradient(to top, var(--logo-dark), var(--bg) 75%);
     color: var(--ton-logo-dark);
 }
