--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -8,3 +8,7 @@ html {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Ruslan Display', Georgia, 'Times New Roman', Times, serif;
 }
+
+.nav {
+    font-size: 1.3rem;
+}
