--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -28,6 +28,8 @@ a {
     padding: 0;
     margin: 0;
     list-style: none;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 .nav-lnk, .header-lnk {
