--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -41,3 +41,9 @@ footer {
     text-align: center;
     padding: 3rem 1rem 0.25rem;
 }
+
+.family {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+}
