--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -47,3 +47,7 @@ footer {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
 }
+
+.family-full-width{
+    grid-column: 1/-1;
+}
