--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -9,6 +9,21 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Ruslan Display', Georgia, 'Times New Roman', Times, serif;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.75rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1.25rem;
+}
 .nav {
     font-size: 1.3rem;
 }
