--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -12,7 +12,7 @@ body {
 
 main {
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 2rem;
 }
 
 a {
@@ -50,7 +50,11 @@ footer {
 .family {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
+    gap: 1rem;    
+}
+
+.family:nth-child(n+1){
+    border-top: 2px solid var(--logo-dark);
 }
 
 .family-full-width{
