--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -38,3 +38,11 @@ footer {
     background-image: linear-gradient(to top, var(--logo-dark)50%, var(--logo) 95%);
     color: var(--ton-logo-dark);
 }
+
+.race:nth-child(odd) h2{
+    background-image: linear-gradient(to right, var(--logo-dark) 25%,var(--bg) 75%);
+}
+
+.race:nth-child(even) h2{
+    background-image: linear-gradient(to right, var(--bg) 25%,var(--logo-dark) 75%);
+}
