--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -47,6 +47,10 @@ footer {
     padding: 3rem 1rem 0.25rem;
 }
 
+.race h2 {
+    padding: 0.5rem 1rem 0;
+}
+
 .family {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
