--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -54,11 +54,14 @@ footer {
 .family {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;    
+    gap: 1rem;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .family:nth-child(n+1){
-    border-top: 2px solid var(--logo-dark);
+    border-top-width: 2px;
+    border-top-style: solid;
 }
 
 .family-full-width{
