--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -56,10 +56,10 @@ footer {
     background-image: linear-gradient(to right, var(--bg) 25%, var(--logo-dark));
 }
 
-.family {
-    border-color: var(--logo);
-}
-
 .family:nth-child(n+1){
     border-top-color: var(--logo-dark);
+}
+
+.genus {
+    border-color: var(--logo);
 }
