--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -54,9 +54,7 @@ footer {
 .family {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
-    border-style: solid;
-    border-width: 1px;
+    gap: 1rem;    
 }
 
 .family:nth-child(n+1){
@@ -66,4 +64,9 @@ footer {
 
 .family-full-width{
     grid-column: 1/-1;
+}
+
+.genus {
+    border-style: solid;
+    border-width: 1px;
 }
