--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -54,7 +54,8 @@ footer {
 .family {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;    
+    gap: 1rem;
+    padding: 1rem;    
 }
 
 .family:nth-child(n+1){
@@ -64,6 +65,8 @@ footer {
 
 .family-full-width{
     grid-column: 1/-1;
+    padding: 0;
+    margin: 0;
 }
 
 .genus {
