--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -83,7 +83,7 @@ footer {
 }
 
 .genus h4 {
-    background-image: linear-gradient(to right, var(--logo) 25%, var(--logo-light) 75%);
+    background-image: linear-gradient(to right, var(--logo-dark) 25%, var(--logo) 75%);
     color: var(--ton-logo);
     text-shadow: 2px 2px 5px var(--ston-logo);
 }
