--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -25,8 +25,13 @@ html {
 }
 
 h1 {
-    color: var(--ton-bg-alt);
-    text-shadow: 2px 2px 5px var(--ston-bg-alt);
+    color: var(--bg);
+    text-shadow: 
+        2px 2px 5px var(--ston-bg-alt),
+        -1px -1px 0 var(--logo-dark),
+        1px -1px 0 var(--logo-dark),
+        -1px 1px 0 var(--logo-dark),
+        1px 1px 0 var(--logo-dark);
 }
 
 button, .button {
