--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -35,6 +35,7 @@ a {
     list-style: none;
     flex-grow: 1;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .nav-lnk, .header-lnk {
@@ -58,21 +59,13 @@ footer {
     padding: 1rem;    
 }
 
-.family:nth-child(n+1) {
-    border-top-width: 2px;
-    border-top-style: solid;
-}
-
-.family:last-child {
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-}
-
 .family h3 {
     border-top-width: 1px;
     border-top-style: solid;
     border-bottom-width: 1px;
     border-bottom-style: solid;
+    padding: 0.5rem 0.5rem 0;
+    margin: 0;
 }
 
 .family-full-width {
@@ -84,6 +77,7 @@ footer {
 .genus {
     border-style: solid;
     border-width: 1px;
+    border-radius: 0.25rem;
 }
 
 .genus h4 {
@@ -92,5 +86,5 @@ footer {
 }
 
 .genus p{
-    margin: 0.25 0.5rem;
+    margin: 0.5rem;
 }
