--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -158,7 +158,7 @@ footer {
 }
 
 @media only screen and (min-width: 40rem) {
-    form {
+    .form {
       width: 25rem;
       margin: 0;
     }
