--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -48,6 +48,23 @@ footer {
     padding: 3rem 1rem 0.25rem;
 }
 
+.news {
+
+}
+
+.news .h2 {
+
+}
+
+.news .date {
+
+}
+
+.news .content {
+    
+}
+
+.news h2,
 .race h2 {
     padding: 0.5rem 1rem 0;
 }
