--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -56,6 +56,23 @@ footer {
     color: var(--ton-logo-dark);
 }
 
+.news {
+
+}
+
+.news h2 {
+
+}
+
+.news .date {
+
+}
+
+.news .content {
+    
+}
+
+.news h2,
 .race h2 {
     color: var(--ton-logo-dark);
     text-shadow: 2px 2px 5px var(--ston-logo-dark);
