--- a/web/project/css/typography.css
+++ b/web/project/css/typography.css
@@ -35,6 +35,10 @@ h4 {
     font-size: 1.3rem;
 }
 
+.news .date {
+    font-size: 0.75rem;
+}
+
 .race:nth-child(odd) h2{
     text-align: right;
 }
