--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -56,7 +56,7 @@ footer {
 
 .news .date, 
 .news .content {
-    margin: 0.25 1.25rem 1.25rem;
+    margin: 0.25rem 1.25rem 1.25rem;
 }
 
 .news h2,
