--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -52,11 +52,22 @@ footer {
     border-style: solid;
     border-width: 1px;
     margin: 1rem;
+    overflow: auto;
+}
+
+.news::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .news .date, 
 .news .content {
     margin: 0.5rem 1.25rem 1.25rem;
+}
+
+.news .content {
+    float: left;
 }
 
 .news h2,
