--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -53,7 +53,7 @@ footer {
     border-left-width: 1px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-radius: 1rem;
+    border-radius: 0.75rem 0 0.75rem 0.75rem;
     margin: 1rem 0;
     overflow: auto;
 }
