--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -98,8 +98,13 @@ footer {
     text-shadow: 2px 2px 5px var(--ston-logo);
 }
 
-.option-tile {
-    background-image: linear-gradient(to right, var(--logo-dark) 25%, var(--logo) 75%);
+.option-tile h2{
+    background-image: linear-gradient(to right, var(--logo-dark) 25%, var(--logo) 75%);        
+}
+
+.option-tile a,
+.option-tile a:visited,
+.option-tile a:focus {
     color: var(--ton-logo);
     text-shadow: 2px 2px 5px var(--ston-logo);
 }
