--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -174,9 +174,19 @@ footer {
     padding: 0.25rem;
 }
 
+.grid-list {
+    display: grid;
+    gap: 1rem;
+}
+
+.grid-tiles {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+}
+
 .option-tile {
-    max-width: 20rem;
-    border-width
+    
 }
 
 .option-tile h2{
