--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -98,7 +98,7 @@ footer {
     text-shadow: 2px 2px 5px var(--ston-logo);
 }
 
-.option-tile h2{
+.option-tile {
     background-image: linear-gradient(to right, var(--logo-dark) 25%, var(--logo) 75%);        
 }
 
