--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -182,8 +182,8 @@ footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
-    justify-items: stretch;
-    align-items: stretch;
+    place-items: stretch;
+    margin: 1rem;
 }
 
 .option-tile {
@@ -192,7 +192,7 @@ footer {
 
 .option-tile h2{
     margin: 0;
-    padding: 1rem;
+    padding: auto 1rem;
 }
 
 @media only screen and (min-width: 40rem) {
