--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -189,6 +189,7 @@ footer {
 .option-tile {
     border-radius: 1rem;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
