--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -200,9 +200,17 @@ footer {
 }
 
 .character {
-    border-radius: 1rem;
+    border-radius: 1.1rem;
     border-style: solid;
     border-width: 1px;
+}
+
+.character h2 {
+    border-radius: 1rem 1rem 0 0;
+}
+
+.character:last-of-type h2 {
+    border-radius: 1rem;
 }
 
 @media only screen and (min-width: 40rem) {
