--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -229,6 +229,10 @@ footer {
     border-radius: 1rem;
 }
 
+.new-char {
+    height: 100%;
+}
+
 @media only screen and (min-width: 40rem) {
     .form {
       width: 25rem;
