--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -251,6 +251,9 @@ footer {
 
 .character-info .character-image {
     grid-area: image;
+    width: 25vw;
+    height: 50vh;
+    box-shadow: 5px 5px 5px black;
 }
 
 .character-info .character-profile {
