--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -253,7 +253,7 @@ footer {
     grid-area: image;
     width: 25vw;
     height: 50vh;
-    box-shadow: 5px 5px 5px black;
+    justify-self: center;
 }
 
 .character-info .character-profile {
