--- a/web/project/css/theme.css
+++ b/web/project/css/theme.css
@@ -145,3 +145,7 @@ footer {
 .character {
     border-color: var(--logo);
 }
+
+.character-info .character-image {
+    box-shadow: 5px 5px 5px black;
+}
