--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -63,8 +63,13 @@ footer {
     margin: 0.5rem 1.25rem 1.25rem;
 }
 
-.race h2, .character-info h2 {
+.race h2 {
     margin: 3rem 0 0;
+}
+
+.race h2,
+.character-info h2 {
+    padding: 0.5rem 1rem 0;
 }
 
 .character h2,
