--- a/web/project/css/layout.css
+++ b/web/project/css/layout.css
@@ -65,15 +65,12 @@ footer {
 
 .race h2 {
     margin: 3rem 0 0;
-}
-
-.race h2,
-.character-info h2 {
     padding: 0.5rem 1rem 0;
 }
 
 .character h2,
-.news h2 {
+.news h2,
+.character-info h2 {
     margin:0;
     padding: 0.5rem 1rem 0;
 }
