--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -162,7 +162,7 @@ footer {
 
 .countdown-section {
     text-align: center;
-    padding: 2rem 0;
+    padding: 0;
     background-image: url("/2021/images/hike.jpg");
 }
 
