--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -98,7 +98,7 @@ header a:hover {
 }
 
 .countdown-section {
-    background: var(--nav-bg);
+    /* background: var(--nav-bg); */
     color: var(--on-nav-bg);
 }
 
