--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -299,6 +299,7 @@ fieldset {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    -webkit-background-size: cover;
 }
 
 .scripture {
