--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -180,7 +180,7 @@ footer {
 .parallax-countdown-section {
     text-align: center;
     padding: 0;
-    background-image: url("/2021/images/hike-w1280x854low.webp");
+    background-image: url("/2021/images/toomas-tartes-Yizrl9N_eDA-unsplash.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
