--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -331,6 +331,11 @@ fieldset {
 
     .parallax {
         background-attachment: fixed;
-    }
+    } 
+}
 
+@media only screen and (min-width: 80rem) {
+    .ham {
+        display: none;
+    }
 }
