--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -155,6 +155,14 @@ header {
     padding: 0.5rem 3rem;
 }
 
+.nav.item {
+    display: none;
+}
+
+.responsive .nav.item {
+    display: block;
+}
+
 section {
     padding: 1rem 3rem;
 }
@@ -329,7 +337,7 @@ fieldset {
     } 
 }
 
-@media only screen and (min-width: 80rem) {
+@media only screen and (min-width: 83rem) {
     .ham {
         display: none;
     }
