--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -155,6 +155,10 @@ header {
     padding: 0.5rem 3rem;
 }
 
+.nav.item.ham {
+    display: block;
+}
+
 .nav.item {
     display: none;
 }
@@ -338,7 +342,11 @@ fieldset {
 }
 
 @media only screen and (min-width: 83rem) {
-    .ham {
+    .nav.item {
+        display: block;    
+    }
+    
+    .nav.item.ham {
         display: none;
     }
 }
