--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -346,6 +346,10 @@ fieldset {
         flex-direction: row;
         justify-content: space-between;
     }
+
+    .nav-ul {
+        flex-direction: row;
+    }
 }
 
 @media only screen and (min-width: 83rem) {
