--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -351,6 +351,16 @@ fieldset {
         flex-direction: row;
         justify-content: space-between;
     }
+
+    .menu {
+        position: relative;
+    }
+
+    .nav-ul {
+        position:absolute;
+        right: 0;
+        z-index: 1;
+    }
 }
 
 @media only screen and (min-width: 83rem) {
