--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -186,7 +186,7 @@ section {
 }
 
 .nav-ul li{
-    margin-left: 1rem;
+    margin-left: 0.25rem 1rem;
 }
 
 .countdown {
@@ -358,8 +358,11 @@ fieldset {
 
     .nav-ul {
         position:absolute;
-        right: 0;
+        top: 2.3rem;
+        right: -1rem;
         z-index: 1;
+        align-items: flex-end;
+        background: var(--nav-bg);
     }
 }
 
