--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -178,14 +178,14 @@ section {
 
 .nav-ul {
     display: grid;
-    gap: 0.25rem;
+    gap: 0.5rem;
     list-style: none;
-    padding: 0;
+    padding: 0.5rem 0 1rem;
     margin: 0;
 }
 
 .nav-ul li{
-    margin: 0.25rem 1rem;
+    margin: 0 1rem;
 }
 
 .countdown {
@@ -361,6 +361,7 @@ fieldset {
         right: -1rem;
         z-index: 1;
         background: var(--nav-bg);
+        justify-items: end;
     }
 }
 
