--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -344,6 +344,12 @@ fieldset {
 @media only screen and (min-width: 40rem) {
     .parallax {
         background-attachment: fixed;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        z-index: -1;
     }
 
     header {
